# MidiParser

./: .gitignore  CMakeLists.txt
include/MidiParser/: MidiFile.hpp
mid/: test_midi_format_0.mid
src/: CMakeLists.txt  Conversion.hpp  MidiFile.cpp
test/: CMakeLists.txt  MidiFileUnitTests.cpp  MidiParserTests.cpp
